# nova-mind

./: .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  DOD-checklist.md  HIGH_PRIORITY_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  Nova-mind说明文档.md  PRIORITY_ROADMAP.md  PROGRESS_REPORT.md  RELEASE.md  index.html  package-lock.json  package.json  spec.md  tailwind.config.js  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml
Example/: README.md  openclaw-tauri-sandbox-guide.md
Example/src-tauri/: Cargo.toml  tauri.conf.json
Example/src-tauri/capabilities/: default.json
Example/src-tauri/src/: commands.rs  main.rs
Example/src-tauri/src/sandbox/: download.rs  mod.rs  process.rs  update.rs  verify.rs
demo/: index.html
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  db.rs  export.rs  health.rs  main.rs  sandbox.rs  security.rs  tests.rs
src-tauri/src/sandbox/: client.rs  error.rs  protocol.rs  stream.rs  types.rs
src/api/: index.ts
src/components/: AppHeader.vue  AppSidebar.vue  ChatPanel.vue  ChatView.vue  ConversationList.vue  CustomTitleBar.vue  ExportDialog.vue  HealthStatus.vue  MarkdownRenderer.vue  SandboxStatus.vue  ShortcutInput.vue  SkillCard.vue  SkillEditor.vue  SkillVariableForm.vue  ThemeToggle.vue  VirtualMessageList.vue
src/composables/: useAIChat.ts  useDraft.ts  useKeyboard.ts  useMarkdown.ts  useSSE.ts  useSettings.ts  useVariableForm.ts  useVariableValidation.ts  useVirtualScroll.ts
src/router/: index.ts
src/stores/: conversationStore.ts  draftStore.ts  settingsStore.ts  shortcutStore.ts  skillStore.ts  themeStore.ts
tests/: MindMapView.test.ts  conversationStore.test.ts  health.test.ts  performance.test.ts  skillStore.test.ts  useSSE.test.ts
(+9 files in other folders)
