[package]
name = "nova-mind"
version = "1.0.0"
description = "Nova Mind - AI-powered Product Management Desktop Application"
authors = ["Nova Mind Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
url = "2"
semver = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
env_logger = "0.11"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
