[package]
name = "openclaw-desktop"
version = "1.0.0"
description = "OpenClaw Desktop with Tauri Sandbox"
authors = ["Your Name"]
license = "MIT"
edition = "2021"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
semver = "1"
chrono = "0.4"
thiserror = "1"
log = "0.4"
open = "5"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", features = ["signal"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
